<resources>

    <string name="facebook_app_id">1762185093822622</string>
    <string name="fb_login_protocol_scheme">fb1762185093822622</string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY">KjADn4MrcfK0XYbKcVKoE9FxF</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">3zl23fWPHAY3XJxcZsyf9SdHjiKGSP9pvHqI2GPHeJOppiQ19T</string>

    <string name="app_name">iMate</string>
    <string name="chats_heading">Messages</string>

    <string name="login">Login</string>
    <string name="anonymous_login">Anonymous Login</string>

    <string name="settings">Settings</string>

    <string name="background">Background</string>
    <string name="change_bg_image">Change Background Image</string>
    <string name="change_bg_color">Change Background Color</string>


    <string name="isPublic">Is Public?</string>
    <string name="userName">Name:</string>
    <string name="userAge">Year Born:</string>
    <string name="userGender">Gender:</string>
    <string name="userCity">City:</string>
    <string name="userCountry">Country:</string>
    <string name="userWeight">Weight:</string>
    <string name="userHeight">Height:</string>
    <string name="userPhone">Phone:</string>
    <string name="userFacebook">Facebook:</string>
    <string name="userTwitter">Twitter:</string>
    <string name="userAddress">Address:</string>
    <string name="userCompany">Company:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="logout">Log Out</string>
    <string name="save">Save</string>

    <string name="hintUserName">User Name</string>
    <string name="hintPhone">0868242564</string>
    <string name="hintAddress">Ktx B DHQG HCM</string>
    <string name="hintCompany">University of Information Technology</string>
    <string name="hintCity">HoChiMinh city</string>
    <string name="hintCountry">VietNam</string>
    <string name="hintWeight">90kg</string>
    <string name="hintHeight">180cm</string>
    <string name="hintFacebook">LeVoGiaKhang</string>
    <string name="hintTwitter">JaKa</string>
    <string name="version">Version</string>
    <string name="versionID">1.0.0</string>
    <string name="search">Search</string>
    <string name="agerange">Age Range</string>
    <string name="typehere">[Type Here&#8230;]</string>


    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="exit_room">EXIT ROOM</string>
    <string name="ask_info">Your partner asks for your information!</string>

    <string name="take_picture">Take Picture</string>
    <string name="select_picture">Select Picture</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login_text">LOGIN</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="agree">Agree</string>
    <string name="select_target_gender_text">Select target gender</string>


    <array name="list_info">
        <item name="name">Name</item>
        <item name="yearborn"> Year Born </item>
        <item name="gender"> Gender </item>
        <item name="phone"> Phone </item>
        <item name="address"> Address </item>
        <item name="company"> Company </item>
        <item name="city"> City </item>
        <item name="country"> Country </item>
        <item name="weight"> Weight </item>
        <item name="height"> Height </item>
        <item name="linkFB"> Link Facebook </item>
        <item name="linkTW"> Link Twitter </item>
    </array>
</resources>
